# MY_minecraft

./: CLAUDE.md  CMakeLists.txt  HUDpainter.h  README.md  Shader.h  basic_struct.h  block.h  camera.h  chunk.h  collision.h  game.h  itemSelection.h  main  main.cpp  perlin_noise.h  player.h  terrain.h  texture.h  toolBar.h
.claude/: settings.local.json
include/glad/: glad.h
lib/glad/: glad.c
shaders/: HUDshader.fs  HUDshader.vs  blockShader.fs  blockShader.vs  selectionShader.fs  selectionShader.vs  skyShader.fs  skyShader.vs  textShader.fs  textShader.vs
src/core/: camera.cpp  camera.h  game.cpp  game.h  preDefined.h
src/entity/: collision.cpp  collision.h  player.cpp  player.h  skyBox.cpp  skyBox.h
src/render/: Shader.h  basic_struct.h  texture.cpp  texture.h
src/ui/: HUDpainter.cpp  HUDpainter.h  itemSelection.cpp  itemSelection.h  textRenderer.h  toolBar.cpp  toolBar.h
src/utils/: stb_image.cpp
src/world/: block.cpp  block.h  chunk.cpp  chunk.h  perlin_noise.h  terrain.cpp  terrain.h
